--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
   <title>Document</title>
 </head>
 <body>
+
+  <section class="start">
+
+    <h1>Il mio personal ParAdisO &hearts;</h1>
+
+    <button><i class="fa-solid fa-chevron-left"></i></button>
+
+    <div class="conteiner_carousel">
+
+      <img src="./img/chefchaouen out.jpg" alt="">
+
+    </div>
+
+    <button><i class="fa-solid fa-angle-right"></i></button>
+
+  </section>
   
 
   <script src="./js/script.js"></script>
