--- a/index.html
+++ b/index.html
@@ -18,17 +18,29 @@
 
   <section class="start">
 
-    <h1>Il mio personal ParAdisO &hearts;</h1>
+    <h1 class="titolo">Il mio personal ParAdisO &hearts;</h1>
 
-    <button><i class="fa-solid fa-chevron-left"></i></button>
+    <div class=" watch">
 
-    <div class="conteiner_carousel">
+      <div class="d-flex justify-content-center align-items-center">
 
-      <img src="./img/chefchaouen out.jpg" alt="">
+        <button class="left">
+          <i class="fa-solid fa-chevron-left"></i>
+        </button>
 
+        <div class="conteiner_carousel">
+
+          <img src="./img/chefchaouen out.jpg" alt="">
+
+        </div>
+
+        <button class="right">
+          <i class="fa-solid fa-angle-right"></i>
+        </button>
+
+      </div>
+      
     </div>
-
-    <button><i class="fa-solid fa-angle-right"></i></button>
 
   </section>
   
