--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="./style/main.css">
 
-  <title>Document</title>
+  <title>Morocco</title>
 </head>
 <body>
 
@@ -30,7 +30,7 @@
 
         <div class="conteiner_carousel">
 
-          <img src="./img/chefchaouen out.jpg" alt="">
+          <!-- <img src="./img/chefchaouen out.jpg" alt=""> -->
 
         </div>
 
